// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withLocalePage browser should add default locale, locale, and site locales to page props 1`] = `
Object {
  "defaultLocale": "id-id",
  "init": true,
  "locale": Object {
    "country": "id",
    "language": "id",
  },
  "siteLocales": Array [
    "id-id",
    "en-id",
  ],
}
`;

exports[`withLocalePage browser should not update locale if unsupported 1`] = `
Object {
  "defaultLocale": "id-id",
  "init": true,
  "locale": Object {
    "country": "id",
    "language": "id",
  },
  "siteLocales": Array [
    "id-id",
    "en-id",
  ],
}
`;

exports[`withLocalePage browser should update locale if supported 1`] = `
Object {
  "defaultLocale": "id-id",
  "init": true,
  "locale": Object {
    "country": "id",
    "language": "en",
  },
  "siteLocales": Array [
    "id-id",
    "en-id",
  ],
}
`;

exports[`withLocalePage server should add default locale, locale, and site locales to page props 1`] = `
Object {
  "defaultLocale": "id-id",
  "init": true,
  "locale": Object {
    "country": "id",
    "language": "id",
  },
  "siteLocales": Array [
    "id-id",
    "en-id",
  ],
}
`;
